--- a/css/style.css
+++ b/css/style.css
@@ -1,163 +1,199 @@
 body {
-	background-color: #6e3900;
-	font-family: Arial, sans-serif;
-	margin: 0;
-	padding: 0;
-  }
-  
-  header {
-	background-color: #38220f;
-	padding: 20px;
-	text-align: center;
-  }
- 
-       
-    h1 {
-      color: #fff;
-      font-size: 32px;
-      margin: 0;
-    }
-    
-    nav ul {
-      list-style-type: none;
-      margin: 0;
-      padding: 0;
-      text-align: center;
-    }
-    
-    nav ul li {
-      display: inline-block;
-      margin-right: 10px;
-    }
-    
-    nav ul li a {
-      color: #fff;
-      text-decoration: none;
-      font-size: 16px;
-    }
-    
-    section {
-      background-color: #fff;
-      margin: 10px;
-      padding: 0;
-      align-items: center;
-    }
-    
-    footer {
-      background-color: #38220f;
-      color: #fff;
-      padding: 20px;
-      text-align: center;
-    }
- 
+  background-color: #c0650494;
+  font-family: Arial, sans-serif;
+  margin: 0;
+  padding: 0;
+}
 
-    <style>
-    body {
-      background-color: #c0650494;
-      font-family: Arial, sans-serif;
-      margin: 0;
-      padding: 0;
-    }
-    
-    header {
-      background-color: #38220f;
-      padding: 20px;
-      text-align: center;
-    }
-    
-    h1 {
-      color: #fff;
-      font-size: 32px;
-      margin: 0;
-    }
-    
-    nav {
-      background-repeat: no-repeat;
-      background-size: cover;
-      padding: 20px;
-      text-align: center;
-      transform-style: initial;
-    }
-    
-    nav ul {
-      list-style-type: none;
-      margin: 0;
-      padding: 0;
-      text-align: center;
-      transition: background-color 0.3s ease-in-out;
-    }
-    
-    nav ul li {
-      display: inline-block;
-      margin-right: 10px;
-      transition: background-color 0.3s ease-in-out;
-    }
-    
-    nav ul li a {
-      color: #ffffff;
-      text-decoration: none;
-      font-size: 19px;
-      text-shadow: #38220f;
-      transition: color 0.3s ease-in-out;
-    }
-    
-    nav ul li:hover {
-      background-color: #6d4c2f;
-    }
-    
-    nav ul li a:hover {
-      color: #fff;
-    }
-    
-    section {
-      background-color: #fff;
-      margin: 10px;
-      padding: 0;
-      align-items: center;
-    }
-    
-    .grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-      grid-gap: 20px;
-    }
-    
-    .card {
-      border: 1px solid #ccc;
-      padding: 10px;
-      text-align: center; 
-      position: relative;
-      overflow: hidden;
-    
-  }
+header {
+  background-color: #38220f;
+  padding: 20px;
+  text-align: center;
+}
 
-  .card img {
-    transition: transform 0.3s;
-  }
-  .card:hover img {
-    transform: scale(1.1);
-  }
-    .card h3 {
-      margin-top: 10px;
-    }
-    
-    .card p {
-      margin-bottom: 10px;
-    }
-    
-    .card button {
-      background-color: #38220f;
-      color: #fff;
-      border: none;
-      padding: 10px 20px;
-      font-size: 16px;
-      cursor: pointer;
-    }
-    
-    footer {
-      background-color: #38220f;
-      color: #fff;
-      padding: 20px;
-      text-align: center;
-    }
-  </style>
+h1 {
+  color: #fff;
+  font-size: 32px;
+  margin: 0;
+}
+
+nav {
+  background-repeat: no-repeat;
+  background-size: cover;
+  padding: 20px;
+  text-align: center;
+  transform-style: initial;
+}
+
+nav ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  text-align: center;
+  transition: background-color 0.3s ease-in-out;
+}
+
+nav ul li {
+  display: inline-block;
+  margin-right: 10px;
+  transition: background-color 0.3s ease-in-out;
+}
+
+nav ul li a {
+  color: #ffffff;
+  text-decoration: none;
+  font-size: 19px;
+  text-shadow: #38220f;
+  transition: color 0.3s ease-in-out;
+}
+
+nav ul li:hover {
+  background-color: #6d4c2f;
+}
+
+nav ul li a:hover {
+  color: #fff;
+}
+
+section {
+  background-color: #fff;
+  margin: 20px;
+  padding: 20px;
+}
+
+.container {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  grid-gap: 20px;
+  justify-items: center; /* Centraliza os itens horizontalmente */
+}
+
+.container div {
+  border: 1px solid #000000;
+  padding: 10px;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 100%;
+  transition: transform 0.3s ease;
+}
+
+.container img {
+  width: 100%;
+  max-height: 200px;
+  object-fit: cover;
+  margin-bottom: 10px;
+  transition: transform 0.3s ease;
+}
+
+.container div:hover {
+  transform: scale(1.05);
+}
+
+.container div:hover img {
+  transform: scale(1.2);
+}
+
+.container h3 {
+  margin-top: 10px;
+}
+
+.container p {
+  margin-bottom: 10px;
+}
+
+.container button {
+  background-color: #38220f;
+  color: #fff;
+  border: none;
+  padding: 10px 20px;
+  font-size: 16px;
+  cursor: pointer;
+}
+
+/*cards container*/
+.container .card {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  border: 1px solid #000;
+  padding: 10px;
+  text-align: center;
+  transition: transform 0.3s ease;
+  height: 100%;
+}
+
+.container .card:hover {
+  transform: scale(1.05);
+}
+
+.container .card .image-box {
+  height: 200px;
+  margin-bottom: 10px;
+  overflow: hidden;
+}
+
+.container .card .image-box img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  transition: transform 0.3s ease;
+}
+
+.container .card .content-box {
+  flex-grow: 1;
+}
+
+.container .card h3 {
+  margin-top: 10px;
+}
+
+.container .card p {
+  margin-bottom: 10px;
+}
+
+.container .card button {
+  background-color: #38220f;
+  color: #fff;
+  border: none;
+  padding: 10px 20px;
+  font-size: 16px;
+  cursor: pointer;
+}
+footer {
+  background-color: #38220f;
+  color: #fff;
+  padding: 20px;
+  text-align: center;
+}
+/*responsividade*/
+@media (max-width: 768px) {
+/* Estilos para telas menores, como tablets e smartphones */
+nav {
+text-align: center;
+margin-bottom: 20px;
+}
+}  
+/* Estilos CSS para o submenu */
+.submenu {
+display: none;
+position: absolute;
+background-color: #fff;
+padding: 10px;
+margin-top: 5px;
+}
+
+li:hover .submenu {
+display: block;
+}
+
+.submenu li {
+display: block;
+margin-bottom: 5px;
+}
+
+.submenu li a {
+color: #000;
+text-decoration: none;
+}
