--- a/css/style.css
+++ b/css/style.css
@@ -61,7 +61,9 @@ section {
   margin: 20px;
   padding: 20px;
 }
-
+h3{
+  
+}
 .container {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
@@ -104,8 +106,8 @@ section {
   margin-bottom: 10px;
 }
 
-.container button {
-  background-color: #38220f;
+.container button1 {
+  background-color: #F90303;
   color: #fff;
   border: none;
   padding: 10px 20px;
@@ -113,7 +115,7 @@ section {
   cursor: pointer;
 }
 .container button2 {
-  background-color: #38220f;
+  background-color: #F5F903;
   color: #fff;
   border: none;
   padding: 10px 20px;
