--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,16 @@ h1 {
   margin: 0;
 }
 
+h3 {
+  text-align: justify;
+}
 
+h4 {
+  font-size: 18px;
+  text-align: justify;
+}
+
+/* Estilos CSS para o menu de navegação */
 nav {
   background-repeat: no-repeat;
   background-size: cover;
@@ -49,26 +58,25 @@ nav ul li a {
 }
 
 nav ul li:hover {
-  background-color: #6d4c2f;
+  background-color: #f8f6f4;
 }
 
 nav ul li a:hover {
   color: #fff;
 }
 
+/* Estilos CSS para a seção de conteúdo */
 section {
   background-color: #fff;
-  margin: 20px;
-  padding: 20px;
+  margin: 0;
+  padding: 0;
 }
-h3{
-  text-align: center;
-}
+
 .container {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
   grid-gap: 20px;
-  justify-items: center; /* Centraliza os itens horizontalmente */
+  justify-items: center;
 }
 
 .container div {
@@ -78,52 +86,71 @@ h3{
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  height: 100%;
+  height: 70%;
   transition: transform 0.3s ease;
 }
 
-.container img {
-  width: 150;
-  max-height: 250;
+.container div img {
+  width: 100%;
+  height: 200px;
+  margin-bottom: 10px;
+  overflow: hidden;
   object-fit: cover;
-  margin-bottom: 10px;
   transition: transform 0.3s ease;
 }
 
-.container div:hover {
-  transform: scale(1);
+.container .box {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
+  text-align: center;
 }
 
-.container div:hover img {
-  transform: scale(1.2);
-}
-
-.container h3 {
-  margin-top: 10px;
-  text-align: right;
-}
-
-.container p {
+.container .box img {
+  width: 100%;
+  height: auto;
   margin-bottom: 10px;
+  transition: transform 0.3s ease;
+}
+.container .box img:hover {
+  transform: scale(1.1);
 }
 
+.container .box h3 {
+  margin-top: 10px;
+}
+
+/* Estilos CSS para os botões do container */
 .container button {
-  background-color: #F90303;
+  background-color: #f90303;
   color: #fff;
   border: none;
   padding: 10px 20px;
   font-size: 16px;
   cursor: pointer;
 }
+
 .container button2 {
-  background-color: #F5F903;
+  background-color: #f5f903;
   color: #fff;
   border: none;
   padding: 10px 20px;
   font-size: 16px;
   cursor: pointer;
 }
-/*cards container*/
+
+.container button3 {
+  background-color: #03f917;
+  color: #fff;
+  border: none;
+  padding: 10px 20px;
+  font-size: 16px;
+  cursor: pointer;
+}
+
+/* Estilos CSS para os cards */
 .container .card {
   display: flex;
   flex-direction: column;
@@ -172,52 +199,60 @@ h3{
   font-size: 16px;
   cursor: pointer;
 }
-.container h4{
+
+.container.card h4 {
   text-align: justify;
   font-size: 15px;
 }
 
+/* Estilos CSS para o submenu */
+.submenu {
+  display: none;
+  position: absolute;
+  background-color: #fff;
+  padding: 10px;
+  margin-top: 5px;
+}
 
+li:hover .submenu {
+  display: block;
+}
+
+.submenu li {
+  display: block;
+  margin-bottom: 5px;
+}
+
+.submenu li a {
+  color: #000;
+  text-decoration: none;
+}
+
+/* Estilos CSS para tornar o layout responsivo */
+@media (max-width: 768px) {
+  /* Ajuste a largura máxima conforme necessário */
+
+  .container {
+    grid-template-columns: 1fr;
+  }
+}
+
+@media (max-width: 480px) {
+  /* Ajuste a largura máxima conforme necessário */
+
+  nav ul li {
+    display: block;
+    margin-bottom: 10px;
+  }
+
+  .container div {
+    margin-bottom: 20px;
+  }
+}
 
 footer {
   background-color: #38220f;
   color: #fff;
   padding: 20px;
   text-align: center;
-}
-/*responsividade*/
-@media (max-width: 768px) {
-/* Estilos para telas menores, como tablets e smartphones */
-nav {
-text-align: center;
-margin-bottom: 20px;
-}
-}  
-/* Estilos CSS para o submenu */
-.submenu {
-display: none;
-position: absolute;
-background-color: #fff;
-padding: 10px;
-margin-top: 5px;
-}
-
-li:hover .submenu {
-display: block;
-}
-
-.submenu li {
-display: block;
-margin-bottom: 5px;
-}
-
-.submenu li a {
-color: #000;
-text-decoration: none;
-}
-
-.lojinha{
-  display: flex;
-    align-items:center ;
-     margin-left:-9%;
 }
