--- a/css/lojinha.css
+++ b/css/lojinha.css
@@ -1,76 +1,91 @@
 body {
-    background-color: #c0650494;
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
-  }
-  
-  header {
-    background-color: #38220f;
-    padding: 20px;
-    text-align: center;
-  }
-  /*stilos CSS para o nav */
+  background-color: #c0650494;
+  font-family: Arial, sans-serif;
+  margin: 0;
+  padding: 0;
+}
+
+header {
+  background-color: #38220f;
+  padding: 20px;
+  text-align: center;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  z-index: 999;
+}
+
+header .logo {
+  margin-bottom: 20px;
+}
+
+/* Estilos CSS para o nav */
 nav {
-    background-repeat: no-repeat;
-    background-size: cover;
-    padding: 20px;
-    text-align: center;
-    transform-style: initial;
-  }
-  
-  nav ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    text-align: center;
-    transition: background-color 0.3s ease-in-out;
-  }
-  
-  nav ul li {
-    display: inline-block;
-    margin-right: 10px;
-    transition: background-color 0.3s ease-in-out;
-  }
-  
-  nav ul li a {
-    color: #ffffff;
-    text-decoration: none;
-    font-size: 19px;
-    text-shadow: #38220f;
-    transition: color 0.3s ease-in-out;
-  }
-  
-  nav ul li:hover {
-    background-color: #6d4c2f;
-  }
-  
-  nav ul li a:hover {
-    color: #fff;
-  }
-  /*stilos CSS para o nav */
-/*stilos CSS para o submenu */
+  background-repeat: no-repeat;
+  background-size: cover;
+  padding: 20px;
+  text-align: center;
+  transform-style: initial;
+  position: fixed;
+  top: 100px;
+  width: 100%;
+  z-index: 999;
+}
+
+nav ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  text-align: center;
+  transition: background-color 0.3s ease-in-out;
+}
+
+nav ul li {
+  display: inline-block;
+  margin-right: 10px;
+  transition: background-color 0.3s ease-in-out;
+}
+
+nav ul li a {
+  color: #050000;
+  text-decoration: none;
+  font-size: 19px;
+  text-shadow: #38220f;
+  transition: color 0.3s ease-in-out;
+  margin:5px;
+}
+
+nav ul li:hover {
+  background-color: #6d4c2f;
+}
+
+nav ul li a:hover {
+  color: #fff;
+}
+/* Estilos CSS para o nav */
+
+/* Estilos CSS para o submenu */
 .submenu {
-    display: none;
-    position: absolute;
-    background-color: #fff;
-    padding: 10px;
-    margin-top: 5px;
-    }
-    
-    li:hover .submenu {
-    display: block;
-    }
-    
-    .submenu li {
-    display: block;
-    margin-bottom: 5px;
-    }
-    
-    .submenu li a {
-    color: #000;
-    text-decoration: none;
-    }
+  display: none;
+  position: absolute;
+  background-color: #fff;
+  padding: 10px;
+  margin-top: 5px;
+}
+
+li:hover .submenu {
+  display: block;
+}
+
+.submenu li {
+  display: block;
+  margin-bottom: 5px;
+}
+
+.submenu li a {
+  color: #000;
+  text-decoration: none;
+}
     /*stilos CSS para o submenu */
     
 
